Added api to the default route of endpoints
