# routes/api.php
@@ -14,8 +14,8 @@ use Illuminate\Http\Request;
 */
 
 
-Route::post('register','Auth\RegisterController@store')->name('register');
+Route::post('api/register','Auth\RegisterController@store')->name('register');
 
-Route::middleware('auth:api')->get('/user', function (Request $request) {
+Route::get('/user', function (Request $request) {
     return $request->user();
-});
+})->middleware('auth:api');
